<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    tools:context=".AccueilActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="131dp"
        android:src="@drawable/logo_small"
        android:layout_marginTop="50dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="120dp"
        android:text="@string/bienvenue_mess"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/commencer"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="130dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/commencer_mess"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/footer_mess"
        android:textColor="@color/white"
        android:layout_gravity="center"
        tools:ignore="MissingConstraints" />



</LinearLayout>