<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    tools:context=".Authentification">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        android:textSize="36sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/logo_small_icon_only_inverted" />


    <EditText
        android:id="@+id/authentification_email_et"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:background="@color/dark"
        android:drawableLeft="@drawable/ic_action_user"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColorHint="@color/yellow"
        android:textColor="@color/yellow"/>

    <EditText
        android:id="@+id/authenfication_password_et"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/authentification_email_et"
        android:layout_alignStart="@+id/authentification_email_et"
        android:layout_alignLeft="@+id/authentification_email_et"
        android:layout_marginTop="38dp"
        android:background="@color/dark"
        android:drawableLeft="@drawable/ic_action_pass"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/yellow"
        android:textColor="@color/yellow"/>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/authenfication_password_et"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"

        app:cardBackgroundColor="@color/yellow"
        app:cardElevation="10dp"
        app:cardCornerRadius="25dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/authenfication_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="@color/grey_dark"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/authenfication_register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authenfication_password_et"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        android:text="@string/register_here"
        android:textColor="@color/yellow" />

    <ProgressBar
        android:id="@+id/authenfication_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/authenfication_register_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:visibility="invisible" />


</RelativeLayout>