<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="@color/grey_dark"
    android:clickable="false"
    android:fadeScrollbars="false"
    android:orientation="vertical"
    tools:context=".LampeActivity">

    <ImageView
        android:id="@+id/retour_choix1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:src="@drawable/arrow" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:src="@drawable/light_bulb" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"
        android:text="@string/choix_option_mess"
        android:textColor="@color/white"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:background="@color/yellow"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="118dp" />

    <Button
        android:id="@+id/activity_main_buttonStart2"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/allumer_mess"
        app:backgroundTint="@color/yellow"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/activity_main_buttonStop2"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/eteindre_mess"
        app:backgroundTint="@color/yellow"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/retour_accueil2"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo_small_icon_only"
        tools:ignore="MissingConstraints" />


</LinearLayout>