<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark"
    android:orientation="vertical"
    tools:context=".DevicesActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:text="@string/choix_mess"
        android:textSize="30dp"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="104dp"
        tools:layout_editor_absoluteY="68dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:background="@color/yellow"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="118dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/light_bulb"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="210dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_marginBottom="25dp"
                android:src="@drawable/coffee"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="433dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="65dp"
                android:src="@drawable/monitor"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="65dp"
                tools:layout_editor_absoluteY="333dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/choix_app1"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/clique_mess"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="234dp" />

            <Button
                android:id="@+id/choix_app2"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:text="@string/clique_mess"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="234dp" />

            <Button
                android:id="@+id/choix_app3"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:text="@string/clique_mess"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="234dp" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button_deconnexion"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/deconnexion"
        android:textColor="@color/white"
        android:backgroundTint="@color/yellow"/>

    <ImageView
        android:id="@+id/retour_accueil"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:src="@drawable/logo_small_icon_only"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="650dp" />


</LinearLayout>